Collections Holdout Button in Outliner Is Ignored by Eevee #69468

Closed
opened 2019-09-04 02:12:33 +02:00 by Matthew Wiebe · 6 comments

Linux Mint
GTX 1050

2.81 Alpha, hash b3b59e3b56

Holdout button in outliner is ignored in Eevee.

To reproduce, open a new .blend, move the default cube into a new collection, enable the holdout restriction toggle in the outliner and toggle it for the new collection, then press F12. The cube is still visible. Expected behaviour: the cube should be invisible. (and should "erase" or "mask" objects behind it, just like in cycles)

Linux Mint GTX 1050 2.81 Alpha, hash b3b59e3b5657 Holdout button in outliner is ignored in Eevee. To reproduce, open a new .blend, move the default cube into a new collection, enable the holdout restriction toggle in the outliner and toggle it for the new collection, then press F12. The cube is still visible. Expected behaviour: the cube should be invisible. (and should "erase" or "mask" objects behind it, just like in cycles)
Author

Added subscriber: @cerebral

Added subscriber: @cerebral

Added subscribers: @fclem, @sebastian_k

Added subscribers: @fclem, @sebastian_k

While the Holdout shader for Eevee has been implemented recently, Holdout for collections is still missing. I'd say it is not a bug, just a missing (yet very desirable) feature. But I'm sure it is on somewhere on @fclem's long ToDo list :)

While the Holdout shader for Eevee has been implemented recently, Holdout for collections is still missing. I'd say it is not a bug, just a missing (yet very desirable) feature. But I'm sure it is on somewhere on @fclem's long ToDo list :)
Clément Foucault self-assigned this 2019-09-04 20:13:36 +02:00

Added subscriber: @lateasusual

Added subscriber: @lateasusual

This issue was referenced by 8e6882a70d

This issue was referenced by 8e6882a70dc4026c6c59e3ca3db4ad6714fe41da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69468
No description provided.