Fix T69468 EEVEE: Collections Holdout Button in Outliner Is Ignored

Not the cleanest implementation but the simplest.

This doubles the number of default shader variations.